# usercode

include/: calc.h  com_type.h  type_def.h
src/: CMakeLists.txt  calc.cpp  dft.c  dft.h  dft_com.h  fftw3.h  flicker.c  flicker.h  flicker_wrapper.cxx  flicker_wrapper.h  half_rms.cpp  half_rms.h  harm.cpp  harm.h  power.cpp  power.h  rms.cpp  rms.h  sts.cpp  sts.h  system_response.c  system_response.h  unbalance.cpp  unbalance.h  util.cpp  util.h  zal_chn_fluct.c  zal_chn_fluct.h
test/: CMakeLists.txt  test.cpp
